Kubernetes/Freelancer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-freelancer
  labels:
    app: spring-freelancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-freelancer
  template:
    metadata:
      labels:
        app: spring-freelancer
    spec:
      containers:
        - name: app
          image: "${IMAGE}"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: spring-freelancer
  labels:
    app: spring-freelancer
spec:
  selector:
    app: spring-freelancer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
